# MCP-based-CustomerSupport-Orchestrator

./: README.md
backend/: env  requirements.txt  test.py  test_run.py
backend/mcp_server/: init_db.py  pyproject.toml  server.py
backend/mcp_server/models/: db_models.py
backend/mcp_server/services/: draft_email_service.py  jira_service.py  llm_service.py  send_email_service.py  slack_service.py
backend/mcp_server/utils/: db.py
data/: CRM.csv  customer_query.csv
